Retrotranslator Changelog
=================================

0.9.7 (2006-01-12)
---------------------------------
  - Support for EnumMap, Closeable, IllegalStateException(String, Throwable), IllegalStateException(Throwable).
  - Class literal expression (Classname.class) caused class initialization, fixed.
  - A private copy of ASM was put into retrotranslator-runtime-0.9.7.jar to prevent ASM versions conflict.
  - JITRetrotranslator does not require sun.misc.* classes to compile.

0.9.6 (2006-01-05)
---------------------------------
  - Dynamic discovery of backported classes.
  - Full support for generics reflection.
  - Improved java.lang.Enum support.
  - Support for all methods in java.lang.Class.
  - Support for BigDecimal(int), BigDecimal(long).
  - Iterable is distinct from Collection, but even Iterable arrays can hold Collections.
  - Patch 1392759 - build patch to create maven repository deployment units.

0.9.5 (2005-12-28)
---------------------------------
  - Support for EnumSet.
  - Support for methods in Arrays.
  - Partial support for generics reflection.
  - Patch 1392096 - easier integration to Maven 2.
  - Patch 1391894 - fix for bug 1391863.
  - Patch 1391842 - build patch for Mac OS X.
  - ASM 2.1 replaced with ASM 3.0 beta.

0.9.4 (2005-12-19)
---------------------------------
  - Support for methods in LinkedList: element, offer, peek, poll, remove.
  - Support for methods in Package: isAnnotationPresent, getAnnotation, getAnnotations, getDeclaredAnnotations.
  - A variable or field of type Queue is assignable from LinkedList.
  - A variable or field of type AnnotatedElement is assignable from Package, Class, Constructor, Field, or Method.
  - Bug fix: IOException when JIT Retrotranslator runs jar file with dependencies.

0.9.3 (2005-12-13)
---------------------------------
  - JIT Retrotranslator for Sun JVM 1.4 added. You may launch your application from
    net.sf.retrotranslator.transformer.JITRetrotranslator or simply